# oMac-vsomeip

./: .gitignore  CMakeLists.txt  Design_Plan.md  Design_Plan_Paper.md  Gemini.md  README.md  run_demo.sh
examples/: CMakeLists.txt  app_up.cpp  nad_app.cpp  safety_uc.cpp
examples/config/: vsomeip-appup.json  vsomeip-nad.json  vsomeip-safety.json
include/: automaton.hpp  crypto.hpp  footer.hpp  reference_monitor.hpp  secured_message.hpp  secured_payload.hpp
policies/: tcu_rd_rc_policy.json
src/: automaton.cpp  crypto.cpp  reference_monitor.cpp
tests/: CMakeLists.txt  test_automaton.cpp  test_crypto.cpp  test_flows.cpp  test_footer.cpp  test_inheritance.cpp
